.provarCaches/00D410000011HE0EAM/objects/rstkf__glaydimproj__c.object
<CustomObject>
    <description>glaydimproj__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glaydimproj_glaydimdiv__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; IF(ISBLANK(rstkf__glaydimproj_glproj__c), &apos;&apos;, IF(ISBLANK(rstkf__glaydimproj_glproj__r.rstkf__glproj_proj__c),&apos;HOMEPROJ&apos;,rstkf__glaydimproj_glproj__r.rstkf__glproj_proj__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_glaydimdiv__c</fullName>
        <label>glaydimdiv</label>
        <referenceTo>rstkf__glaydimdiv__c</referenceTo>
        <relationshipLabel>glaydimprojs</relationshipLabel>
        <relationshipName>glaydimprojs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Project Master</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>glaydimprojs</relationshipLabel>
        <relationshipName>glaydimprojs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p00net__c</fullName>
        <formula>rstkf__glaydimproj_p00dr__c - rstkf__glaydimproj_p00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p01cr__c</fullName>
        <label>Period01 Credit</label>
        <summarizedField>rstkf__gltxndim__c.rstkf__gltxndim_cramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxndim__c.rstkf__gltxndim_period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxndim__c.rstkf__gltxndim_glaydimproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p01dr__c</fullName>
        <label>Period01 Debit</label>
        <summarizedField>rstkf__gltxndim__c.rstkf__gltxndim_dramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxndim__c.rstkf__gltxndim_period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxndim__c.rstkf__gltxndim_glaydimproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p01net__c</fullName>
        <formula>rstkf__glaydimproj_p01dr__c - rstkf__glaydimproj_p01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p02cr__c</fullName>
        <label>Period02 Credit</label>
        <summarizedField>rstkf__gltxndim__c.rstkf__gltxndim_cramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxndim__c.rstkf__gltxndim_period__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxndim__c.rstkf__gltxndim_glaydimproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p02dr__c</fullName>
        <label>Period02 Debit</label>
        <summarizedField>rstkf__gltxndim__c.rstkf__gltxndim_dramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxndim__c.rstkf__gltxndim_period__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxndim__c.rstkf__gltxndim_glaydimproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj_p02net__c</fullName>
        <formula>rstkf__glaydimproj_p02dr__c - rstkf__glaydimproj_p02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glaydimproj</label>
    <listViews>
        <fullName>rstkf__RS_GLAYDIMPROJ</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaydimproj_glproj__c</columns>
        <columns>rstkf__glaydimproj_glaydimdiv__c</columns>
        <columns>rstkf__glaydimproj_p04dr__c</columns>
        <columns>rstkf__glaydimproj_p04cr__c</columns>
        <columns>rstkf__glaydimproj_p04net__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GLAYDIMPROJ</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glaydimprojs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>